<resources>
    <string name="app_name">PulaPulaAluguelDeBrinquedos</string>

    <!--  Strings do Menu -->
    <string name="clientes">Clientes</string>
    <string name="brinquedos">Brinquedos</string>
    <string name="aluguel">Aluguel</string>

    <!-- String dos titulos da tela -->
    <string name="listar_clientes">Listar Clientes</string>
    <string name="gerenciar_clientes">Gerenciar Clientes</string>
    <string name="listar_brinquedos">Listar Brinquedos</string>
    <string name="gerenciar_brinquedos">Gerenciar Brinquedos</string>
    <string name="listar_aluguel">Listar Aluguel</string>
    <string name="gerenciar_aluguel">Gerenciar Aluguel</string>

    <!-- String dos botões -->
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="listar">Listar</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <!--  Strings campos do Cliente  -->
    <string name="nome_completo">Nome Completo:*</string>
    <string name="telefone">Telefone:*</string>
    <string name="data_de_nascimento">Data de Nascimento:*</string>
    <string name="cpf">CPF:*</string>
    <string name="cep">CEP:*</string>
    <string name="rua">Rua:*</string>
    <string name="numero">Número:</string>
    <string name="complemento">Complemento:</string>
    <string name="bairro">Bairro:*</string>
    <string name="cidade">Cidade:*</string>
    <string name="observacao">Observação:</string>


    <!-- Strings campos do Brinquedo-->
    <string name="nome">Nome:*</string>
    <string name="valor">Valor:*</string>
    <string name="estoque">Estoque:*</string>


    <!-- String campos do Aluguel -->
    <string name="brinquedo">Brinquedo</string>
    <string name="cliente">Cliente</string>
    <string name="data_inicio">Data Início*</string>
    <string name="data_fim">Data Fim*</string>
    <string name="selecione_o_cliente">Selecione o Cliente*</string>
    <string name="selecione_o_brinquedo">Selecione o Brinquedo*</string>

</resources>